# Codex

./: .env  .env.example  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  social_url_checker.py
deploy/k8s/: social-discovery.yaml
docker/: entrypoint.sh
examples/: hotels.csv
fixtures/: sample_page.html
hotel_social_discover/: __init__.py  checkpoint.py  config.py  fetcher.py  logging_utils.py  parser.py  robots.py  storage.py  url_tools.py
load_tests/: locustfile.py
social_discovery_service/: __init__.py  cli.py  config.py  main.py
social_discovery_service/api/: routes.py
social_discovery_service/db/: __init__.py  models.py  schema.sql  session.py
social_discovery_service/db/migrations/: env.py
social_discovery_service/db/migrations/versions/: 202401010000_init.py
social_discovery_service/jobs/: __init__.py  checkpoint.py  manager.py  models.py
social_discovery_service/monitoring/: __init__.py  metrics.py
social_discovery_service/security/: __init__.py  api_keys.py
social_discovery_service/worker/: __init__.py  celery_app.py  proxy.py  rq_worker.py  runner.py
tests/: test_cli.py  test_parser.py  test_storage.py
