[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-social-discover"
version = "0.1.0"
description = "Async crawler to discover hotel social media profiles"
readme = "README.md"
authors = [{name = "Hotel Social Discover"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]",
    "playwright>=1.40",
    "beautifulsoup4",
    "lxml",
    "aiofiles",
    "tenacity",
    "python-dotenv",
    "pandas",
    "tldextract",
    "robotexclusionrulesparser; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
packages = ["hotel_social_discover"]
