[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-discovery-service"
version = "0.1.0"
description = "Enterprise-ready microservice for discovering hotel social links"
readme = "README.md"
authors = [{name = "Hotel Social Discover"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]",
    "playwright>=1.40",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "pydantic>=1.10",
    "fastapi>=0.110",
    "uvicorn[standard]",
    "typer[all]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "prometheus-client",
    "celery",
    "rq",
    "redis",
    "tldextract",
    "robotexclusionrulesparser; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "locust",
]

[tool.setuptools]
packages = [
    "hotel_social_discover",
    "social_discovery_service",
]
